--- a/Biblio.bib
+++ b/Biblio.bib
@@ -83,6 +83,28 @@ numpages = {7}
 % Meshfree --------------------------------------------
 %------------------------------------------------------
 
+@article{Bardenhagen_Contact_2001,
+author = {Bardenhagen, S. and Guilkey, James and Roessig, K. and Brackbill, J. and Witzel, W. and Foster, J.},
+year = {2001},
+month = {01},
+pages = {},
+title = {An improved contact algorithm for the material point method and application to stress propagation in granular material},
+volume = {2},
+journal = {CMES. Computer Modeling in Engineering & Sciences},
+doi = {10.3970/cmes.2001.002.509}
+}
+
+@article{XZhang_Contact_2011,
+author = {Huang, P. and Zhang, Xiong and Ma, S. and Huang, X.},
+year = {2011},
+month = {01},
+pages = {498 - 517},
+title = {Contact algorithms for the material point method in impact and penetration simulation},
+volume = {85},
+journal = {International Journal for Numerical Methods in Engineering},
+doi = {10.1002/nme.2981}
+}
+
 @article{Sulsky1994,
 author = {Sulsky, D. L. and Schreyer, H.L. and Chen, Z.},
 doi = {10.1016/0045-7825(94)90112-0},
