--- a/_region_.tex
+++ b/_region_.tex
@@ -240,7 +240,7 @@
 }
 
 \newcommand{\DM}[1]{
-  \textcolor{gree}{{#1}}
+  \textcolor{green}{{#1}}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -486,7 +486,7 @@ ensures a \textit{unbiased statistical inference} based on the nodal
 data as states the Jayne's\cite{Jaynes1957} principle of
 \textit{maximum entropy}. And second the Delaunay triangulation that
 warranties the \textit{least width} shape function support. To reach
-to a compromise between two competing objectives, a Pareto set is
+\DM{delete to} a compromise between two competing objectives, a Pareto set is
 defined as,
 \begin{align*}
   \label{eq:LME-scheme-pareto-set}
@@ -568,12 +568,15 @@ model \cite{Zhenmao_2005,Schreyer_2002}. The eigensoftening concept
 was originally developed by Navas {\it et al.}
 (2017)\cite{Navas_2017_ES} as an extension for quasi-brittle materials
 of the eigenerosion proposed by Pandolfi \& Ortiz
-(2012)\cite{Pandolfi_2012} for fracture of brittle materials. A
+(2012)\cite{Pandolfi_2012} for fracture of brittle materials. \DM{ XXXX I would modify the following  sentence as "The evaluation of both approaches \cite{Navas_2017_ES} show that the
+eigenerosion algorithm significantly overestimates the tensile  
+stress and the strain peaks, meanwhile eigensoftening captures the forces and crack
+patterns accurately XXXXX}. A
 comparison between both in \cite{Navas_2017_ES} shows that the
 eigenerosion algorithm significantly overestimates the tensile  
 stress and the strain peaks, meanwhile eigensoftening captures the forces and crack
 patterns accurately. On the other hand, eigensoftening algorithm agrees
-very well with experimental results in all the aspects. Furthermore,
+very well with experimental results in all the aspects \DM{which aspect?} . Furthermore,
 the accuracy of this algorithm has been proven for complex fracture
 patterns such as the ones obtained with fiber reinforces concrete (FRC),
 \cite{Navas_2018_ES}.\\
@@ -631,8 +634,7 @@ the static fracture energy per unit of area, $G_F$. Notice how a
 cohesive crack appears when the maximum tensile strength, $f_t$, is
 reached. Once the crack, $w_n$, reaches the value of the
 critical crack opening, $w_c$, a stress-free crack is
-attained. For intermediate values a damage value between zero
-and one represents the extension to which the material has failed.
+attained. \DM{ see the following sentence: comma missing? Clarified--->} For intermediate values a damage value between zero and one represents the extension to which the material has failed. \DM{ hasta acá }
 %%%%%%%%%%%
 \begin{figure}
   \centering
@@ -645,8 +647,8 @@ and one represents the extension to which the material has failed.
 %%%%%%%%%%%
 For the eigensoftening algorithm, a strength criterion for crack
 initialization was adopted. Particularly the maximum principal stress
-theory for brittle fracture was considered by authors
-\cite{Navas_2017_ES}. With that purpose, the variation of the averaged
+theory for brittle fracture was considered  \DM{ delete by the authors}  by authors
+\cite{Navas_2017_ES}. With that purpose \DM{ which purpose?}, the variation of the averaged
 strain energy density in the $\epsilon$-neighborhood of the material point
 $\vec{x}_p^{k+1}$ can be obtained as
 \begin{equation}
@@ -677,18 +679,18 @@ material point $\vec{x}_p^{k+1}$ as
   \frac{1}{m_p} \sum_{x_q^{k+1} \in
   B_{\epsilon}(x_p^{k+1})} m_q \tens{\sigma}_{q,I}, 
 \end{equation}
-where $m_p$ is the total mass of the $\epsilon$-neighborhood, defined similarly than in the eigenerosion methodology (Eq.~\eqref{eq:mass-EE}).
+where $m_p$ is the total mass of the $\epsilon$-neighborhood, defined similarly  \DM{ Pondría:  defined similarly TO  the eigenerosion method} than in the eigenerosion methodology (Eq.~\eqref{eq:mass-EE}).
 %\begin{equation}
 %  \label{eq:averaged-mass}
 %  m_p = \sum_{x_q^{k+1} \in B_{\epsilon}(x_p^{k+1})} m_q.
 %\end{equation}
-This definition of the equivalent critical stress leads to a
+This definition \DM{ dos veces definition en la misma oración, podes poner directamente: The equivalent critical stress leads to a definition of the averaged strain energy ... } of the equivalent critical stress leads to a
 definition of the averaged strain energy in terms of the averaged
 strain as $\delta W_{\epsilon,p} =
  \tens{\sigma}_{\epsilon,p}\ \delta\varepsilon_p$. The softening behaviour is
 activated once $\tens{\sigma}_{\epsilon,p}^{k+1}$ surpasses the
 tensile strength, $f_t$. This consists of a reduction of the internal
-forces as,
+forces as, 
  \begin{equation}
    \label{eq:f-int-damaged}
    f^{int}_I = \sum_p (1 - \chi_p)\ \tens{\sigma}_{p}^{k+1} \cdot
@@ -723,14 +725,14 @@ Introducing \eqref{eq:effective-fracture-strain} in
 as,
 \begin{equation}
   \label{eq:damage-variable-chi-II}
-\chi = \frac{\varepsilon_{\epsilon,f}\ h^{\epsilon}}{w_c}.  
+\chi = \frac{\varepsilon_{\epsilon,f}\ h_{\epsilon}}{w_c}.  
 \end{equation}
 The function of $\chi$ presented in \eqref{eq:damage-variable-chi-II}
 represents a linear softening behaviour. For a general case, the
 damage variable can be expressed in terms of the following variables,
 \begin{equation}
   \label{eq:damage-variable-chi-III}
-  \chi = \chi(\varepsilon_{\epsilon,f}, h^{\epsilon}, f_t, w_c, G_f)
+  \chi = \chi(\varepsilon_{\epsilon,f}, h_{\epsilon}, f_t, w_c, G_f)
 \end{equation}
 Implementation details can be consulted in \ref{sec:eigens-algor-1}.
 
@@ -747,9 +749,9 @@ techniques, we endeavour to exploit the meshfree benefits of
 the \acrshort{lme} approximants to introduce a node-linked method. Due
 to the global definition of this interpolation technique, the classical
 interpretation of the \acrshort{fem} element typically adopted in
-\acrshort{mpm} simulations is not required anymore. A linked
+\acrshort{mpm} simulations is not required anymore. \DM{Intead, a} linked
 list of tributary nodes is reconstructed with the closest node as
-starting point at each time step instead. Therefore, each node is assigned to an
+starting point at each time step \DM{deleted instead}. Therefore, each node is assigned to an
 unique linked-list of those particles which are closest to it. This
 approach allows to reconstruct easily a search list with the support
 of the initial connectivity of the mesh and offers a suitable basis
@@ -761,32 +763,33 @@ algorithm can be found in \ref{sec:node-linked-method-1}.
 \section{Cases of study and discussion}
 \label{sec:3}
 
-As noticed in \cite{Zhang_EE_2020}, the EigenMPM have two important
-shortcomings. The first is the presence of stress instabilities even
-with \acrshort{gimp} shape functions. To overcome it, \acrshort{lme}
+\DM{The proposed approach to overcome the two main shortcomings of EighenMPM \cite{Zhang_EE_2020} has been evaluated with "two benchmark tests"¿?. } \DM{DELETE: As noticed in \cite{Zhang_EE_2020}, the EigenMPM have two important
+shortcomings}. The first one deals with the presence of stress instabilities provoked by the spatial discretization, appearing even
+when the \acrshort{gimp} shape functions are employed. To overcome it, \acrshort{lme}
 approximants are introduced as an
 alternative to the existing interpolation techniques. Its
-impressive performance mitigating spurious stress oscillations
-\cite{Wobbes2020} under the \acrshort{mpm} framework help to enhance
-notoriously the quality of the results as we can see in Section
-\ref{sec:3.1}. Where both interpolation techniques
-are compared by carry out an eigenerosion simulation. The second
-limitation is concerning its inability to simulate properly quasi-brittle
+performance in mitigating spurious stress oscillations under the \acrshort{mpm}~\cite{Wobbes2020,Molinos2020} framework helps to enhance
+notoriously the quality of the results as it is observed in Section
+\ref{sec:3.1}, where both interpolation techniques
+are compared by carrying out an eigenerosion simulation. The second
+limitation is concerned to its inability to simulate properly quasi-brittle
 fracture \cite{Navas_2018_ES}. It can be solved through the
-eigensoftening algorithm described in Section \ref{sec:2.3}. A proof
-of it is exposed in Section \ref{sec:3.3}, where experimental results
-of a drop-weight impact test are compared with those produced by
-eigensoftening computations.
+eigensoftening algorithm described in Section \ref{sec:2.3}.\MMP{A proof
+of it is exposed in Sections \ref{sec:3.2} \ref{sec:3.3}, where experimental results
+are compared with experimental ones as well as eigensoftening
+computations. In the first case comparing with a semicircular bending
+test and in the second case with a drop-weight impact test.}
+
 
 \subsection{Edge-cracked square panel in mode I}
 \label{sec:3.1}
-
-This problem here presented is devoted to compare how much \acrshort{lme}
-approximants are able to improve the result \textit{versus} standard
-linear interpolation. It consists in a square plate of size $H = 1$ containing
-an initial edge crack of length $0.25 \cdot H$ loaded in a pure mode I
-by displacement control on the outer flanks of the plate, Figure
-\ref{fig:geometry-cracked-panel-mode-I}.
+The aim of the problem presented hereinafter is to assess the
+capability of the \acrshort{lme} approximants to improve the result
+\textit{versus} the standard linear interpolation. The application
+consists of a square plate of size $H = 1$ containing an initial edge
+crack of length $0.25 \cdot H$ loaded in a pure mode I by displacement
+control on the outer flanks of the plate (See Figure
+\ref{fig:geometry-cracked-panel-mode-I} for details). 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
   \centering
@@ -795,21 +798,25 @@ by displacement control on the outer flanks of the plate, Figure
   \label{fig:geometry-cracked-panel-mode-I}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The constitutive model consider for numerical experiment is a
-linear-elastic Hookean material, where Young's modulus \gls{E} = 1.06, the
+
+\PNA{UNIDADES} 
+
+\PNA{NOMBRAR ALGO A LOS CASOS ANALITICOS O DE MICHAEL ORTIZ}
+
+The constitutive model considered in the numerical experiment is a
+linear-elastic Hookean material, whose Young's modulus \gls{E} = 1.06, the
 Poisson's ratio \gls{nu} = 0.333, and critical energy-release rate
-\gls{Gf} = 0.0001. This set of parameters was taken from \cite{Pandolfi_2012}. In
-\acrshort{mpm}, two different discretization are required. In one hand
-a cartesian grid of nodes is consider with a nodal spacing value of
+\gls{Gf} = 0.0001. This set of parameters has been previously employed by Pandolfi~\textit{et al.}~\cite{Pandolfi_2012}. In
+\acrshort{mpm}, two different discretization are required. On the one hand,
+a cartesian grid of nodes is considered with a nodal spacing value of
 0.025. On the other hand, the plate will be modeled with a initial
 layout of four particles per element and occupying the Gauss quadrature
 positions.\\
 
 Figure \ref{fig:Reactions-cracked-panel-mode-I} clearly shows the
-presence of wiggles in both loading and fracture stages
-in the reaction-displacements curve when linear interpolation
-technique is used. In contrast, \acrshort{lme} simulation does not
-exhibit these spurious oscillations and remains linear. Besides that,
+presence of wiggles in the reaction-displacements curve, in both loading and post-failure stages,
+when linear interpolation technique is used. In contrast, \acrshort{lme} simulation does not
+exhibit these spurious oscillations and remains linear until the failure. About the strength,
 linear interpolation produces stiffer results than
 \acrshort{lme}. This can be attributed to imprecision in the stress
 field due to grid-crossing phenomena.\\
@@ -823,16 +830,16 @@ field due to grid-crossing phenomena.\\
   \label{fig:Reactions-cracked-panel-mode-I}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-On the other hand, Figure \ref{fig:Stress-cracked-panel-mode-I}
+
+Additionally, Figure \ref{fig:Stress-cracked-panel-mode-I}
 exhibits more clearly the difference between linear interpolation and
 \acrshort{lme}, since numerical instability becomes rather significant
 when particles crosses the boundary of the element in the linear
-case. Although this behavior does not affect significantly to the peak
-stress value in a hookean material \cite{Zhang_EE_2020}, if
-hyperelastic materials are consider for future simulations,
-inaccuracies in the stress field could affect dramatically to the
-final result. On the other hand \acrshort{lme} produces soft stress
-field evolution even after breaking.
+case, which is observed at 60 seconds. \PNA{Although, apparently, the differences in the obtained peaks are not extremely significant, it can be owing to the aforementioned hookean material employed~\cite{Zhang_EE_2020}. When more sophisticated constitutive models will be employed, severe
+%if hyperelastic materials are consider for future simulations,
+inaccuracies may appear in the stress field that could affect dramatically to the
+final result. Focusing on the post failure behavior, it can be seen how \acrshort{lme} produces soft stress
+field evolution even after breaking.}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centering
@@ -847,40 +854,128 @@ field evolution even after breaking.
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 An important consideration regarding the presence of oscillations once
-both parts of the panel are separated, Figure
+both parts of the panel are separated is observed in Figure
 \ref{fig:Reactions-cracked-panel-mode-I}. These phenomena should not be
 attributed to the eigenerosion algorithm since the fracture process is
-over. They are due to the dynamic nature of the solver.  
+over. They are due to the dynamic nature of the solver: \PNA{once the
+  energy is release dinamically by the crack, the waves propagate
+  along the domain.}
 
-\subsection{Drop-weight impact test}
+
+\subsection{Semicircular bending test}
 \label{sec:3.2}
 
-Once the accuracy of the \acrshort{lme} approximants have been proven
-in Section \ref{sec:3.1}, henceforth will be adopted without comparing
-with linear interpolation. Therefore this section is devoted to proof
-the accuracy of the eigensoftening algorithm to simulate the behavior
-of quasi-brittle materials under dynamic loading. An example of this
-load case is the three-point bending test on a notched beam is
-conducted under impact loading. This kinds of experiments are
-challenging to reproduce numerically with an explicit solver since
-fracture occurs in a period of milliseconds and high strength
-materials are involved. Accordingly, really small time steps are
-required to achieve a simulation numerically stable. Additionally,
-this kind of simulations traditionally require the implementation of
-contact algorithm to reproduce the hammer impact in the beam. In the
-\acrshort{mpm}, the implementation of this feature can be bypassed to
-obtain preliminary results. Nevertheless, this kind of algorithm could
-be implemented to get ever more accurate solutions. Although this is
-out of the scope of this document, future research of authors will overcome this
-limitation.\\
+% The second application to be considered is a series of semicircular
+% bending tests on Johnstone, which have been carried out by Lim et al.95 The aim of this example is to examine its predictive capability of the SPH model under a wide range
+% of mixed-mode loading conditions. The geometry and boundary conditions of the test in the experiment are shown in
+% Figure 9A. Similar with 3-point bending test, the semicircular specimens with a radius of 47.5 mm and a thickness of
+% 20 mm are supported by two rollers at a span of 47.5 mm and loaded by another roller on its mid-span. Notches with a
+% length of 16.6 mm are created with different notch angles varying from 0 to 60 with respect to the vertical axis to
+% investigate the influences of the notch angles on the peak load (P) and the fracture toughness (KI,KII), which are calcu-
+% lated as follows:
 
-As in the study of Zhang {\it et al.} \cite{Zhang_2009,Zhang_2010a},
-an impact hammer of 120.6 kg was employed to drop it at an impact
-speed of 881 mm/s. The beam dimensions where 100 mm x 100 mm (B x D)
+% where KI and KII are respectively mode I and mode II fracture toughness; r is the specimen radius; t is the specimen
+% thickness; a is the notch length; YI and YII are mode I and mode II normalised stress intensity factor. As the values of YI
+% and YII can be obtained from the data by Lim at al.6 KI and KII can be calculated based on the above equation once the
+% peak load (P) is known. The material properties of Johnstone are listed in Table 1. The friction angle and dilation angle
+% are respectively taken as 33 and 4  for average quality rock masses in Hoek and Brown96 for the following examples.
+% Figure 9 shows the corresponding SPH configuration of the semicircular bending test with a notch angle of 30 . In
+% the tests, a particle discretisation of 0.95 mm is used, resulting in a total number of 3995 SPH particles for generating
+% the specimen. To create accurate notch angles using reasonable particle numbers, the initial SPH arrangement in this
+% test is different from the traditional one such as the 3-point bending test in Section 5.1. The initial location of each SPH
+% particle in semicircular bending tests is related to the notch angle as shown in Figure 9B. Similar to the 3-point bending
+% tests, three layers of boundary particles are generated for simulating the point loading in the experiments. The velocities
+% of the top boundary particles are vx = 0,vy = − 2 mm/s, whereas the velocities of the bottom boundary particles are
+% as vy = 0. As Johnstone rocks are classified as soft rocks with a relatively small elastic Young's modulus, both artificial
+% viscosity and artificial stress are used in this test to stabilise the numerical solutions. The ramp loading is also applied
+% to alleviate the dynamic effect due to the sudden loading. The stresses of boundary particles are updated in the same
+% way as that in the 3-point bending test. The stresses of real particles near the loading particles are recorded during the
+% simulation process, from which the peak load and fracture toughness can be obtained for the comparison with the
+% experimental data.
+% Figure 10 illustrates the progressive development of fracture and the horizontal velocity profile at the failure stage
+% for the semicircular specimen with the rotational angle of 30 . As seen in Figure 10A, some particles near the tip of the
+% notch are first damaged, showing that the fracture is initiated at the location of the notch tip. Then, the fracture propa-
+% gates towards the loading point (Figure 10B–D), and eventually, a vertical curvilinear fracture pattern is formed in the
+% middle of the sample (Figure 10E). The horizontal velocity profile corresponding to Figure 10E is also plotted in
+% Figure 10F. It can be seen that the particles on the left side of the fracture move to the left whereas the particles on the
+% other side move to the right direction; thus, the sample is split into two halves at the end. In this approach, SPH particle
+% itself could not be cracked visually; however, each damaged SPH particle possesses a FPZ, and the material behaviour
+% within the FPZ will contribute to the decrease in the overall stress state of the SPH particle, thereby resulting in the sep-
+% aration between two damaged SPH particles. The same test without using the artificial stress is also plotted in
+% Figure 11. The result remains stable when the fracture is initiated (Figure 11A) but becomes unstable during the post-
+% failure process (Figure 11B,C). Unrealistic fracture and particles clustering are observed in Figure 11B,C, which indi-
+% cates the tensile instability problem is occurred in SPH. By comparing those two results, it can be concluded that the
+
+% tensile instability problem can be completely removed and good numerical stability can be achieved by just adopting
+% this artificial stress term.
+% Figure 12 depicts the comparison of mixed-mode fracture envelope between experiments and SPH simulations for
+% different notch inclination angles α = 0 , 15  , 30  , 45 , 50 and 60 . It shows that the simulation fracture patterns
+% marked as red lines match well with the experimental results shown as black lines. The final fracture pattern is a verti-
+% cal straight line when α = 0 (pure mode I). When α > 0 , the sample is subjected to mixed-mode or pure mode II load-
+% ing, resulting in a curvilinear fracture paths. For all simulation cases, the fractures initiate from the notch tip and then
+% propagate towards upper loading point, while the experiments show that a few fractures tend to initiate behind the
+% notch tip when the notch angle is beyond α =50 . Nevertheless, the simulation results still could successfully predict
+% the overall fracture envelope in experiments and demonstrate the
+% capability of the traditional SPH model for capturing
+
+% the fracture development under various complex loading conditions. In the meanwhile, the comparison of peak load
+% between experiments and simulations for the notch inclination angles varying from 0 to 60 with an internal incre-
+% ment of 5 is plotted in Figure 13A. It is noted here that a notch angle of 54 (instead of 55) is used in the current test
+% as the sample is subjected to pure mode II loading condition when α = 54 .95 The SPH simulation can well capture the
+% increasing trend of the peak load with the increasing notch angles in the experiment. Additionally, Figure 13B com-
+% pares the predictions of fracture toughness in SPH simulation against the experimental results and Lim's theory.95 The
+% simulation results perfectly fall within the experimental data ranges even though the fracture toughness data in the
+% experiments are quite scattered. Nevertheless, the numerical results agree closely with the empirical fracture toughness
+% envelope, which was proposed by Lim et al.95 and represented as a black line Figure 13B. It further confirms that our
+% model could accurately predict the mixed-mode fracture behaviour of rocks in semicircular bending test.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+
+\begin{table}
+  \centering
+  \begin{tabular}[]{c c c c c c c}
+    \hline
+      &   $\rho$   & $\text{f}_c$ & $\text{f}_t$ & $G_F$ &   E   & $\text{d}_{max}$ \\
+      & (kg/m$^3$) &     (MPa)    &     (MPa)    & (N/m) & (GPa) & (mm) \\
+    \hline
+Value &    1540    &     102.7    &      5.4     &  141  &   31  &  12 \\
+    \hline
+  \end{tabular}
+  \caption[Mechanical properties of thje concrete]{Material properties of Johnstone.}
+  \label{tab:Johnstone-properties}
+\end{table}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[width=0.6\textwidth]{./Figure-Semicircular-bending-test}
+  \caption{Geometry and boundary condition of the semicircular bending
+    test.}
+  \label{fig:geometry-Semicircular-bending-test}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cite{Wang_2020}
+
+\subsection{Drop-weight impact test}
+\label{sec:3.3}
+\PNA{This section is devoted to proof
+the accuracy of the eigensoftening algorithm within the \acrshort{mpm} framework when the behavior
+of quasi-brittle materials under dynamic loading is simulated. One of the most interesting examples of this
+loading case is the three-point bending test on a concrete notched beam when it is conducted under impact loading. Indeed, this experimental test is appropriate to be reproduced numerically with the explicit solver proposed in this paper since
+fracture occurs in a period of milliseconds and waves propagate fast along the high strength
+materials involved in the aforementioned test.} Accordingly, small time steps are
+required to achieve a numerically stable simulation.\\
+
+An interesting case of this experimental test was reported by Zhang {\it et al.} \cite{Zhang_2009,Zhang_2010a}. As in the aforementioned study,
+an impact hammer of 120.6 kg has been employed in the proposed simulations to drop it at an impact
+speed of 881 mm/s. The beam dimensions were 100 mm x 100 mm (B x D)
 in cross section, and 420 mm in total lenght (L). The initial
 notch-depth ratio was approximately 0.5, and the span, S, was fixed at
-300 mm during the tests, see Figure
-\ref{fig:geometry-drop-weight-impact-test}.
+300 mm during the tests (see Figure
+\ref{fig:geometry-drop-weight-impact-test}).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
   \centering
@@ -890,10 +985,10 @@ notch-depth ratio was approximately 0.5, and the span, S, was fixed at
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 The material adopted for the simulation was characterised by Navas
-{\it et al.}~\cite{Navas_2017_ES}, and the material properties, such
+{\it et al.}~\cite{Navas_2017_ES}, being the material properties, such
 as the material density, \gls{rho}, the compressive strenght, \gls{fc},
 the tensile strenght \gls{ft}, the specific fracture energy, \gls{Gf},
-and the elastic modulus \gls{E} are given in table \ref{tab:concrete-properties}.\\
+and the elastic modulus \gls{E}, provided in table \ref{tab:concrete-properties}.\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \begin{table}
@@ -911,17 +1006,21 @@ Value &    2368    &     102.7    &      5.4     &  141  &   31  &  12 \\
   \label{tab:concrete-properties}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 For the present research, a 2D setting of the experiment has been
 adopted. Both the hammer and the concrete beam are explicitly
-represented. Several levels of discretization were required to assess
+represented in order to properly capture the impact. Several levels of discretization were required to assess
 the objectiveness of the obtained results. The results here exposed
 are from a discretization of 30616 material points and 6297 nodes. To
 achieve better results, an unestructured grid layout has been adopted
 focusing the minimum nodal spacing, 0.47 mm, in the middle of the beam and in
 the impact surface of the hammer. For this simulation, \gls{gamma-lme} was
-fixed to 6.\\
+fixed to 6. Once the accuracy of the \acrshort{lme} approximants have been proven
+in Section \ref{sec:3.1}, this discretization has been adopted.
+%without comparing
+%with linear interpolation. Therefore \\
 
-First the reaction and impact forces are validated against their
+First, the reaction and impact forces are validated against their
 experimental counterparts. Since the impact forces applied by the
 hammer and the reaction forces at the two supports were experimentally
 measured, they are compared with numerical ones in Figure
@@ -945,19 +1044,23 @@ feasible explanation to this unexpected result can due the composite
 nature of the concrete. Another discrepancy is in the much higher
 values of maximum impact and reaction forces in numerical than in
 experimental. In this case, this is a consequence of over-rigidity
-in the supports. Therefore, this results can be improved in future research
-by a suitable contact algorithm.\\
+in the supports. \PNA{Although the traditional \acrshort{mpm} implementation allows collision of two bodies, inaccurate energy conservation is obtained without the implementation of a conservative contact algorithm to reproduce the hammer impact in the beam. %In the
+%%\acrshort{mpm}, the implementation of this feature can be bypassed to obtain preliminary results. Nevertheless, this kind of algorithm could
+%be implemented to get ever more accurate solutions. 
+Despite the observed discrepancies, this is
+out of the scope of this document, although future research of authors will overcome this
+limitation. Similarly, results of support forces will be more realistic when modelled by a suitable contact algorithm instead of avoiding any vertical displacement}.\\
 
-And finally horizontal stress distributions and crack propagation are
-extracted, see Figure \ref{fig:Stress-vs-damage-impact-test}. Stress
+Finally, longitudinal stress distribution and crack propagation are
+depicted in Figure \ref{fig:Stress-vs-damage-impact-test}. Stress
 evolution agrees with the results obtained by \cite{Navas_2017_ES}
 under the \acrshort{otm} framework. Two additional considerations about
-this results are concerning the interpolation technique. In one hand,
+this results are concerning the interpolation technique. On the one hand,
 in the opposite to the \acrshort{ugimp} shape function, \acrshort{lme}
 allows unstructured grids. This is a remarkable benefit for this kind
 of simulations since the majority of the computational effort is
-clearly localised in a tiny region of the domain. And in the other
-hand there is the possibility to reduce the shape function support to avoid
+clearly localised in a tiny region of the domain. On the other
+hand, there is the possibility to reduce the shape function support to avoid
 a material point in one side of the crack is affected by those in the
 other side of the crack. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -976,24 +1079,30 @@ other side of the crack.
 
 \section{Conclusions}
 \label{sec:4}
-Based on the EigenMPM approach to fracture proposed by Zhang {\it et al.}
-\cite{Zhang_EE_2020}, we have proposed two addition improvements which
-solves the shortcomings presented in the original concept. First by
-bring to the \acrshort{mpm} framework the concept of eigensoftening,
-which allow to consider gradual failure process of each material
-point. This concept can be compared with a cohesive law in the context
-of cohesive fracture. Furthermore, more elaborated damage curves can
-be designed to describe the failure process in more sophisticated
+\PNA{Based on the EigenMPM approach to fracture proposed by Zhang {\it et al.}
+\cite{Zhang_EE_2020}, two additional improvements have been proposed in the present research in order to 
+solve the shortcomings of the original concept that Zhang {\it et al.} pointed out in the aforementioned paper \cite{Zhang_EE_2020}. 
+
+Firstly, by
+introducing the concept of eigensoftening to the \acrshort{mpm} framework,
+which allows to consider gradual failure process of each material point. This concept is analogous the softening law which is traditionally employed in the context
+of cohesive fracture in \acrfull{fem}. Furthermore, this failure criterion admits the design of more elaborated damage curves, which can be employed in order to describe the failure process in more sophisticated
 materials. In this direction, an interesting future improvement of the
 algorithm would be the ability to simulate of crack patterns in
-composite material such carbon fiber. This leads a challenging
-research topic. Secondly, \acrshort{lme} is employed to remove from
-the solution those wiggles due to inaccuracies in the stress
-integration. This interpolation technique could help to improve
-results in fracture propagation by adapting it through the
-deformation gradient. \textit{A priori} this will enhance the already
-impressive localisation properties of eigensoftening and eigenerosion
-algorithms. 
+composite material such as steel or carbon fiber reinforced concretes\cite{Ruiz2019}. Interesting researches have been done on this field~\cite{Navas_2018_ES}. In addition, the eigensoftening approach can be extrapolated to rock fracture in the same manner the eigenerosion was~\cite{Wang2017}, taking into account that the volumetric stiffness remains in order to support bulk loads. 
+
+Secondly, \acrshort{lme} is employed to remove from
+the solution those wiggles provoked by inaccuracies in the stress integration. This spatial discretization was previously employed within the \acrshort{mpm} framework with excellent results under the elastic regime~\cite{Wobbes2020,Molinos2020}. The traditional time scheme of the \acrshort{mpm} has been improved with a Newmark Predictor Corrector scheme as well. In this research, the aforementioned techniques have helped to improve the
+results in fracture propagation through the eigensoftening and eigenerosion algorithms. Further improvement may be reached by adapting \acrshort{lme} through the
+deformation gradient \cite{Kochmann2019}. \textit{A priori} this would enhance the localisation properties of the proposed algorithms in more sophisticated domains.
+
+Finally, for better capturing the measurement of forces made in the
+laboratory, more realistic contact tools have to be
+developed. Navas~\textif{et al.} demonstrate the importance of the
+stiffness of the support in order to obtain accurate results of the
+reaction forces. Interesting contact algorithms within the
+\acrshort{mpm} methodology are available in the literature
+\cite{Bardenhagen_Contact_2001,XZhang_Contact_2011}}
 
 \section*{Acknowledgements}
 The financial support to develop this research from the Ministerio de
@@ -1132,4 +1241,4 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
 \bibliography{Biblio} 
 
 \end{document}
-\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-1135) }
+\message{ !name(2020_EFM_MPM_Eigensoftening.tex) !offset(-1244) }
